golden/error/parse_fstring_double_hole_unclosed.test
f"This f-string is not closed.{0 0}"

# output:
 --> stdin:1:33
  |
1 | f"This f-string is not closed.{0 0}"
  |                                  ^
Error: Unclosed hole in f-string, expected '}' here.

 --> stdin:1:30
  |
1 | f"This f-string is not closed.{0 0}"
  |                               ^
Note: Hole opened here.
